fix: fixed last contact covering by nav footer on mobile

--- a/src/app/pages/contacts/contact-list/contact-list.scss
+++ b/src/app/pages/contacts/contact-list/contact-list.scss
@@ -13,10 +13,11 @@
 
   @media (max-width: 992px) {
     max-width: none;
+    padding-bottom: 5rem;
   }
 
   @media (max-width: 375px) {
-    padding: 1rem 0.5rem;
+    padding: 1rem 0.5rem 5rem;
   }
 }
 
